refactor(CBS-256567:LN-58226:LN-58800): refactor trade loan arrangement and facility components
- Update persistence layer entities and embeddables for enhanced functionality
- Refactor REST API DTOs and controllers for improved request handling
- Enhance command handlers and mappers for better business logic flow
- Update domain entities and events for improved state management
- Add database changelog for schema modifications
- Improve query DTOs and application service components